Refine player stats to track valid encounters only